[project]
name = "threat-detection-ai"
version = "0.1.0"
description = "Threat detection and risk assessment AI inspired by Person of Interest."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.9",
    "networkx>=3.0",
    "spacy>=3.8",
    "python-multipart>=0.0.6",
    "transformers>=4.40"
]

[build-system]
requires = ["setuptools>=65.0","wheel"]
build-backend = "setuptools.build_meta"
